added title, h1, and h2

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 
 	<head>
-
+		<title>Robotic Nation</title>
 	</head>
 
 	<body>
-
+		<h1>The official site of Robotic Nation.</h1>
+		<h3>A hub for all source code.</h3> 
 
 	</body>
 
