worked on home page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 
 <html>
 
 	<head>
-		<title>Robotic Nation</title>
+		<link rel="stylesheet" href="styles/styles.css" />
+		<title>Home | Robotic Nation</title>
 	</head>
 
 	<body>
-		<h1>The official site of Robotic Nation.</h1>
-		<h3>A hub for all source code.</h3> 
+		<div class="top">
+			<h1>Robotic Nation</h1>
+			<img class="center" src="images/merchlogo.png" width="400px" height="400px"/>
+			<br></br>
+		</div>
+		<div class="middle">
+			<h2>Inspiring STEM.</h2>
+			<div class="container">
+			    <img class="container__image" src="images/arduino-logo.png" width="250px" height="200px"/>
+					<img class="container__image" src="images/adobe-logos.png" width="200px" height="200px"/>
+					<img class="container__image" src="images/rpi-logo.webp" width="200px" height="250px"/>
+			    <div class="container__text">
+			        <p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
+			    </div>
+			</div>
+			<!--<p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
+			<img class="home-images" src="images/arduino-logo.png" width="250px" height="200px"/>
+			<img class="home-images" src="images/adobe-logos.png" width="200px" height="200px"/>
+			<img class="home-images" src="images/rpi-logo.webp" width="200px" height="250px"/> -->
+
+		</div>
+
 
 	</body>
 
