--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
 		</div>
 		<div class="middle">
 			<h2>Inspiring STEM.</h2>
-			<div class="row">
-				<div class="column">
-					<p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
-				</div>
-				<div class="column">
-					<img src="images/arduino-logo.png" width="200px" height="200px"/>
-				</div>
-				<div class="column">
-					<img src="images/adobe-logos.png" width="200px" height="200px"/>
-				</div>
-				<div class="column">
-					<img src="images/rpi-logo.webp" width="200px" height="250px"/>
-				</div>
+			<div class="brief-summary">
+				<p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
 			</div>
+			<div class="img-section">
+				<a href="https://www.arduino.cc/"><img src="images/arduino-logo.png" width="250px" height="200px"/></a>
+			</div>
+			<div class="img-section">
+				<a href="https://www.adobe.com/"><img src="images/adobe-logos.png" width="200px" height="200px"/></a>
+			</div>
+			<div class="img-section">
+				<a href="https://www.raspberrypi.org/"><img src="images/rpi-logo.webp" width="200px" height="250px"/></a>
+			</div>
+
 			<!--<p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
 			<img class="home-images" src="images/arduino-logo.png" width="250px" height="200px"/>
 			<img class="home-images" src="images/adobe-logos.png" width="200px" height="200px"/>
