finished the home, about, and store pages

--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="styles/styles.css" />
+		<link rel="stylesheet" href="styles/styles-home.css" />
 		<title>Home | Robotic Nation</title>
 	</head>
 
 	<body>
+		<!--Header/Menu Bar-->
+
+		<div>
+			<ul class="nav">
+  			<li class="nav"><a class="nav" href="index.html">Home</a></li>
+  			<li class="nav"><a class="nav" href="about.html">About</a></li>
+ 	 			<li class="nav"><a class="nav" href="store.html">Store</a></li>
+				<li class="nav"><a class="nav" href="youtube.html">YouTube</a></li>
+				<li class="nav"><a class="nav" href="resources.html">Resources</a></li>
+			</ul>
+		</div>
+
 		<div class="top">
 			<h1>Robotic Nation</h1>
-			<img class="center" src="images/merchlogo.png" width="400px" height="400px"/>
+			<img id="robo-image" class="center" src="images/merchlogo.png" width="400px" height="400px"/>
 			<br></br>
 		</div>
 		<div class="middle">
