made adjustments to store page

--- a/store.html
+++ b/store.html
@@ -18,7 +18,7 @@
 		  </div>
 
       <h1>Merchandise</h1>
-
+      <h2>T h e <span>|</span> C h a n n e l <span>|</span> C o l l e c t i o n</h2>
       <table>
         <tr>
           <td><a href="https://teespring.com/robotic-nation-t-shirt-hoodi?tsmac=store&tsmic=robotic-nation-merch-shop&pid=212&cid=5839"><img src="images/hoodie-blue.png" width="330px" height="350px"/></a></td>
@@ -30,6 +30,8 @@
           <td><a href="https://teespring.com/robotic-nation-mug-and-sticker?tsmac=store&tsmic=robotic-nation-merch-shop&pid=794"><img src="images/sticker.png" width="330px" height="350px"/></a></td>
         </tr>
       </table>
+
+      <h2>T h e <span>|</span> C o d e r ' s <span>|</span> C o l l e c t i o n</h2>
 
     </body>
 
