--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="styles/styles-home.css" />
+		
 		<title>Home | Robotic Nation</title>
+
+		<!--Bootstrap-->
+
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+		<link rel="stylesheet" href="styles/styles-home.css"/>
+		
+
 	</head>
 
 	<body>
 		<!--Header/Menu Bar-->
-
+		<!--Interfering with carousel-->
 		<div>
 			<ul class="nav">
   			<li class="nav"><a class="nav" href="index.html">Home</a></li>
@@ -22,27 +32,61 @@
 
 		<div class="top">
 			<h1>Robotic Nation</h1>
-			<img id="robo-image" class="center" src="images/merchlogo.png" width="400px" height="400px"/>
+			<img id="robo-image" class="center" src="images/merchlogo.png" width="350px" height="450px"/>
+			<div class="container">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="images/computer-code.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
+			    </div>
+			    <div class="carousel-item">
+			      <img src="images/arduino-working.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
+			    </div>
+			    <div class="carousel-item">
+			      <img src="images/pink-car.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+			</div>
 			<br></br>
 		</div>
 		<div class="middle">
 			<h2>Inspiring STEM.</h2>
-			<div class="brief-summary">
+			<div>
 				<p>I create tech tutorials with Arduino, Adobe, and Raspberry Pi. Whether you want to become a maker or you're an expert already, this channel contains content that will both excite you and spark ideas for new creation.</p>
 			</div>
-			<div class="img-section">
-				<a href="https://www.arduino.cc/"><img src="images/arduino-logo.png" width="250px" height="200px"/></a>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 col-md-6 col-sm-12">
+						<a href="https://www.arduino.cc/"><img src="images/arduino.png" width="250px" height="250px"/></a>
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12">
+						<a href="https://www.adobe.com/"><img src="images/creative-cloud.png" width="250px" height="250px"/></a>
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12">
+						<!--fix the cropping on this image-->
+						<a href="https://www.raspberrypi.org/"><img src="images/rpi-logo.webp" width="225px" height="275px"/></a>
+					</div>
+				</div>
 			</div>
-			<div class="img-section">
-				<a href="https://www.adobe.com/"><img src="images/adobe-logos.png" width="200px" height="200px"/></a>
-			</div>
-			<div class="img-section">
-				<a href="https://www.raspberrypi.org/"><img src="images/rpi-logo.webp" width="200px" height="250px"/></a>
-			</div>
-
-
 		</div>
 
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 	</body>
 
