updated images, styles

--- a/store.html
+++ b/store.html
@@ -40,6 +40,7 @@
       </table>
 
       <h2>T h e <span>|</span> C o d e r ' s <span>|</span> C o l l e c t i o n</h2>
+      <h3>Coming Soon!</h3>
 
     </body>
 
