--- a/youtube.html
+++ b/youtube.html
@@ -17,8 +17,18 @@
 	</head>
 
 	<body>
-
-		<h1>Subscribe you roach!</h1>
+		<!--Header/Menu Bar-->
+		 <div>
+			  <ul class="nav">
+  			  <li class="nav"><a class="nav" href="index.html">Home</a></li>
+  			  <li class="nav"><a class="nav" href="about.html">About</a></li>
+ 	 			  <li class="nav"><a class="nav" href="store.html">Store</a></li>
+				  <li class="nav"><a class="nav" href="youtube.html">YouTube</a></li>
+				  <li class="nav"><a class="nav" href="resources.html">Resources</a></li>
+			  </ul>
+		  </div>
+		  
+		  <h1>Subscribe you roach! Also I will update this.</h1>
 		
 	</body>
 
