--- a/index.html
+++ b/index.html
@@ -33,34 +33,7 @@
 		<div class="top">
 			<h1>Robotic Nation</h1>
 			<img id="robo-image" class="center" src="images/merchlogo.png" width="350px" height="450px"/>
-			<div class="container">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			  <ol class="carousel-indicators">
-			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			  </ol>
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="images/computer-code.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
-			    </div>
-			    <div class="carousel-item">
-			      <img src="images/arduino-working.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
-			    </div>
-			    <div class="carousel-item">
-			      <img src="images/pink-car.jpg" height="550px" width="100px" class="d-block w-100" alt="...">
-			    </div>
-			  </div>
-			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
-			</div>
-			</div>
+			
 			<br></br>
 		</div>
 		<div class="middle">
@@ -71,7 +44,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4 col-md-6 col-sm-12">
-						<a href="https://www.arduino.cc/"><img src="images/arduino.png" width="250px" height="250px"/></a>
+						<a href="https://www.arduino.cc/"><img src="images/arduino-logo.png" width="270px" height="230px"/></a>
 					</div>
 					<div class="col-lg-4 col-md-6 col-sm-12">
 						<a href="https://www.adobe.com/"><img src="images/creative-cloud.png" width="250px" height="250px"/></a>
