worked on youtube.html

--- a/youtube.html
+++ b/youtube.html
@@ -6,10 +6,9 @@
 		<!--Bootstrap-->
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+		
 		
 		<title>YouTube | Robotic Nation</title>
 		<link rel="stylesheet" href="styles/styles-youtube.css">
@@ -27,9 +26,23 @@
 				  <li class="nav"><a class="nav" href="resources.html">Resources</a></li>
 			  </ul>
 		  </div>
-		  
-		  <h1>Subscribe you roach! Also I will update this.</h1>
-		
+		  <h1>Take a peak at what Robotic Nation has to offer.</h1>
+		  <table>
+		  	<tr>
+		  		<td><iframe src="https://www.youtube.com/embed/MQ6c4PAQ7Q8" width="560" height="315"></iframe></td>
+		  		<td><iframe src="https://www.youtube.com/embed/rTH_wg3vQyw" width="560" height="315"></iframe></iframe></td>
+		  	</tr>
+		  	<tr>
+		  		<td><p>A short, comprehensive video exploring the terminal; a new frontier for many.</p></td>
+		  		<td><p>Heard of cloud computing but never really understood what it was? This tutorial dives into the skills you'll need to get started.</p></td>
+		  	</tr>
+		  </table>
+
+
+
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 
 
