made some updates to the css and removed all iframes

--- a/about.html
+++ b/about.html
@@ -10,14 +10,15 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles-about.css">
     <title>About | Robotic Nation</title>
   </head>
 
   <body>
     <!--Header/Menu Bar-->
-		 <div>
+		 <div class="navigation">
 			  <ul class="nav">
   			  <li class="nav"><a class="nav" href="index.html">Home</a></li>
   			  <li class="nav"><a class="nav" href="about.html">About</a></li>
