--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="styles/styles-home.css"/>
 		
 
@@ -20,11 +20,11 @@
 	<body>
 		<!--Header/Menu Bar-->
 		<!--Interfering with carousel-->
-		<div>
+		<div class="navigation">
 			<ul class="nav">
-  			<li class="nav"><a class="nav" href="index.html">Home</a></li>
-  			<li class="nav"><a class="nav" href="about.html">About</a></li>
- 	 			<li class="nav"><a class="nav" href="store.html">Store</a></li>
+	  			<li class="nav"><a class="nav" href="index.html">Home</a></li>
+	  			<li class="nav"><a class="nav" href="about.html">About</a></li>
+	 	 		<li class="nav"><a class="nav" href="store.html">Store</a></li>
 				<li class="nav"><a class="nav" href="youtube.html">YouTube</a></li>
 				<li class="nav"><a class="nav" href="resources.html">Resources</a></li>
 			</ul>
@@ -32,7 +32,7 @@
 
 		<div class="top">
 			<h1>Robotic Nation</h1>
-			<img id="robo-image" class="center" src="images/merchlogo.png" width="350px" height="450px"/>
+			<img id="robo-image" class="center floating" src="images/merchlogo.png" width="350px" height="450px"/>
 			
 			<br></br>
 		</div>
