--- a/store.html
+++ b/store.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--Header/Menu Bar-->
-		 <div>
+		 <div class="navigation">
 			  <ul class="nav">
   			  <li class="nav"><a class="nav" href="index.html">Home</a></li>
   			  <li class="nav"><a class="nav" href="about.html">About</a></li>
