--- a/youtube.html
+++ b/youtube.html
@@ -8,8 +8,6 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
-		
-		
 		<title>YouTube | Robotic Nation</title>
 		<link rel="stylesheet" href="styles/styles-youtube.css">
 
@@ -17,65 +15,22 @@
 
 	<body>
 		<!--Header/Menu Bar-->
-		 <div>
+		 <div class="navigation">
 			  <ul class="nav">
-  			  <li class="nav"><a class="nav" href="index.html">Home</a></li>
-  			  <li class="nav"><a class="nav" href="about.html">About</a></li>
+	  			  <li class="nav"><a class="nav" href="index.html">Home</a></li>
+	  			  <li class="nav"><a class="nav" href="about.html">About</a></li>
  	 			  <li class="nav"><a class="nav" href="store.html">Store</a></li>
 				  <li class="nav"><a class="nav" href="youtube.html">YouTube</a></li>
 				  <li class="nav"><a class="nav" href="resources.html">Resources</a></li>
 			  </ul>
 		  </div>
-		  <h1>Take a peek at what Robotic Nation has to offer.</h1>
+		  <h1>Stats</h2>
+		  <!-- Get YouTube Api working here -->
+		  <h2 id="subscribers">1,069</h2> 
+		  <h2 id="views">222,999</h2>
+		  <h2 id="videos">59</h2>
 		  <table>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/JTn6_UlQ4eQ"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/rTH_wg3vQyw"></iframe></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>Learn the real way to create a website and do it quickly.</p></td>
-		  		<td><p>Heard of cloud computing but never really understood what it was? This tutorial dives into the skills you'll need to get started.</p></td>
-		  	</tr>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/uPoNni2GnFs"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/YIergLQgMlE"></iframe></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>A great way to make coding fun byt implementing it in this iconic game.</p></td>
-		  		<td><p>This robot avoids falling off edges using an ultrasonic sensor, L298N motor driver, and an Arduino Uno. It is similar to the feature on the Roomba robot, which avoids falling down stairs.</p></td>
-		  	</tr>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/8gsPgNrt8bQ"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/zMkQruU40DE"></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>Use an Arduino to make a cool gadget that can turn your lights on and off.</p></td>
-		  		<td><p>The Pixy2 Camera, made by Charmed Labs, is a small camera that can process video extremely quickly. It's the second version of the Pixy Camera. Pixy2 has the ability to track up to 7 objects at once, follow lines, and identify barcodes. This video shows one how to get started with the device and how to teach it to track objects.</p></td>
-		  	</tr>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/0yzelNfmIhM"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/_gmfQeDwc4g"></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>Use an Arduino to make a security system for your home. In this instance, a fingerprint is require to open a lock.</p></td>
-		  		<td><p>Learn to harness the power of your own muscles with the Myoware Muscle Sensor and an Arduino.</p></td>
-		  	</tr>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/GBeA_HrVvAc"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/RV7mKee90nQ"></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>A beginner's start up guide to using the water sensor module with the Arduino Nano.</p></td>
-		  		<td><p>A DIY tutorial on how you can spice up your workspace with programmable LED strips.</p></td>
-		  	</tr>
-		  	<tr>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/AStrQoRl2oM"></iframe></td>
-		  		<td><iframe width="560" height="315" src="https://www.youtube.com/embed/MZKMwyETxUY"></iframe></td>
-		  	</tr>
-		  	<tr>
-		  		<td><p>Control your lock devices via bluetooth with Arduino, BLE App, and some servos.</p></td>
-		  		<td><p>Get started with the basics of bluetooth by controlling an LED with the BLE module.</p></td>
-		  	</tr>
+		  	
 		  </table>
 		  <h1>More videos to be added soon.</h1>
 		  
