structured the youtube page

--- a/about.html
+++ b/about.html
@@ -36,16 +36,10 @@
 
     <div class="contactme">
       <h1>Contact me...</h1>
-      <p>Email { ltlemur04@gmail.com }</p>
+      <p>Email { <a href="mailto:ltlemur04@gmail.com">ltlemur04@gmail.com</a> }</p>
       <p>GitHub { <a href="https://github.com/afazio1">afazio1</a> } </p>
       <p>Instagram { <a href="https://www.instagram.com/robotic.nation/">robotic.nation</a> }</p>
       <p>YouTube { <a href="http://www.youtube.com/c/RoboticNation">Robotic Nation</a> }</p>
-
-
-
-
-
-
 
 
   </body>
