--- a/youtube.html
+++ b/youtube.html
@@ -24,15 +24,10 @@
 				  <li class="nav"><a class="nav" href="resources.html">Resources</a></li>
 			  </ul>
 		  </div>
-		  <h1>Stats</h2>
-		  <!-- Get YouTube Api working here -->
-		  <h2 id="subscribers">1,069</h2> 
-		  <h2 id="views">222,999</h2>
-		  <h2 id="videos">59</h2>
-		  <table>
-		  	
-		  </table>
-		  <h1>More videos to be added soon.</h1>
+		  <h1>Code</h1>
+		  <div class="code"><a href="https://github.com/afazio1/robotic-nation-website/tree/master/projects/covid-tracker">COVID Tracker</a></div>
+		  <div class="code"><a href="https://github.com/afazio1/robotic-nation-website/tree/master/projects/smart-display">Smart Display</a></div>
+		  <div class="code"><a href="https://github.com/afazio1/robotic-nation-website/tree/master/projects/discord-bot">Discord Bot</a></div>
 		  
 
 
